ErrorLogApp/main/default/objects/CDER_ErrorLog__c/CDER_ErrorLog__c.object-meta.xml
<CustomObject>
    <label>CDER_ErrorLog</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>CDER_ErrorLog Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CDER_ErrorLogs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>