ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/ErrorCause__c.field-meta.xml
<CustomField>
    <fullName>ErrorCause__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ErrorCause</label>
    <length>255</length>
    <type>Text</type>
</CustomField>