ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/ExceptionMessage__c.field-meta.xml
<CustomField>
    <fullName>ExceptionMessage__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExceptionMessage</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>