ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/ExceptionStackTrace__c.field-meta.xml
<CustomField>
    <fullName>ExceptionStackTrace__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExceptionStackTrace</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>