ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/ExceptionType__c.field-meta.xml
<CustomField>
    <fullName>ExceptionType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ExceptionType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>