ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>LineNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>