ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/OriginApplication__c.field-meta.xml
<CustomField>
    <fullName>OriginApplication__c</fullName>
    <label>OriginApplication</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>OMUFA</fullName>
            </value>
            <value>
                <fullName>Cares</fullName>
            </value>
            <value>
                <fullName>ResearchIND</fullName>
            </value>
            <value>
                <fullName>PLAIR</fullName>
            </value>
            <value>
                <fullName>OrphanDrug</fullName>
            </value>
            <value>
                <fullName>MeetingRequest</fullName>
            </value>
            <value>
                <fullName>RDRC</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>