ErrorLogApp/main/default/objects/CDER_ErrorLog__c/fields/OriginComponent__c.field-meta.xml
<CustomField>
    <fullName>OriginComponent__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>OriginComponent</label>
    <length>255</length>
    <type>Text</type>
</CustomField>