ErrorLogApp/main/default/objects/CDER_ErrorLog__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>ErrorCause__c</columns>
    <columns>ExceptionMessage__c</columns>
    <columns>ExceptionStackTrace__c</columns>
    <columns>ExceptionType__c</columns>
    <columns>OriginApplication__c</columns>
    <columns>OriginComponent__c</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>